WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293170
Fix deprecation warnings due to new SDK
https://bugs.webkit.org/show_bug.cgi?id=293170
Summary
Fix deprecation warnings due to new SDK
Jonathan Bedard
Reported
2025-05-16 22:08:42 PDT
Use effectiveGeometry in scene objects.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-05-16 22:08:42 PDT
<
rdar://problem/151511271
>
Jonathan Bedard
Comment 2
2025-05-16 22:09:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45537
Jonathan Bedard
Comment 3
2025-05-16 22:17:15 PDT
Need a different approach.
EWS
Comment 4
2025-05-16 22:35:05 PDT
Committed
295051@main
(3f6760eba7d8): <
https://commits.webkit.org/295051@main
> Reviewed commits have been landed. Closing PR #45537 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug