Fix deprecation warnings due to new SDK https://bugs.webkit.org/show_bug.cgi?id=293170 rdar://151511271

Unreviewed build fix.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _updateLastKnownWindowSizeAndOrientation]): Silence deprecation warnings.
* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenParentWindowState initWithWindow:]): Ditto.
(-[WKFullScreenWindowController _configureSpatialFullScreenTransition]): Ditto.
(-[WKFullScreenWindowController _performSpatialFullScreenTransition:completionHandler:]): Ditto.

Canonical link: https://commits.webkit.org/295051@main